<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_trip_detail_share"
        android:icon="@drawable/ic_share"
        android:title="@string/activity_trip_detail_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_trip_detail_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/activity_trip_detail_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_trip_detail_change_image"
        android:title="@string/activity_trip_detail_change_image"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_trip_detail_change_name"
        android:title="@string/activity_trip_detail_change_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_trip_detail_delete"
        android:title="@string/activity_trip_detail_delete"
        app:showAsAction="never"/>


</menu>