<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarThemeOverlay"
        app:popupTheme="@style/PopupThemeOverlay"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp" >

            <ImageView
                android:id="@+id/activity_about_app_icon"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:src="@drawable/icon_plane_tracker" />

            <TextView
                android:id="@+id/activity_about_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_about_app_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textSize="22sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_about_github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                app:backgroundTint="?primary"
                android:textColor="@color/white_text"
                android:text="@string/activity_about_github_link"
                />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_about_market_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:backgroundTint="?primary"
                android:textColor="@color/white_text"
                android:text="@string/activity_about_market_link"
                />
            <TextView
                android:id="@+id/activity_about_website_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_above="@id/activity_about_github_link"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_about_website_link"
                />

            <TextView
                android:id="@+id/activity_about_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/activity_about_website_link"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_about_author" />

            <TextView
                android:id="@+id/activity_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/activity_about_author"
                android:text="@string/activity_about_version" />

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
